fix: Reduce margin inline start on lists in services section to avoid overflow

--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ nav {
             padding: var(--spc-600) var(--spc-700);
 
             & :is(ul, ol) > li {
-                margin-inline-start: var(--spc-700);
+                margin-inline-start: calc(var(--spc-500) * 0.65);
             }
         }
     }
